Mise à jour des compétences

--- a/Mon_CV.html
+++ b/Mon_CV.html
@@ -28,9 +28,9 @@
 			<section class="competences">
 				<h2>Mes compétences</h2>
 				<ul>
-					<li><h3>Niveau intermédiaire en anglais</h3></li>
+					<li><h3>Niveau intermédiaire en anglais: TOEIC 865</h3></li>
 					<li><h3>Notions d'espagnol</h3></li>
-					<li><h3>Notions en python, java, html et CSS</h3></li>
+					<li><h3>Notions en python, java, HTML5 et CSS3 et Javascript</h3></li>
 				</ul>
 			</section>
 			<section class ="formation">
