Mise à jour des expériences

--- a/Mon_CV.html
+++ b/Mon_CV.html
@@ -21,6 +21,7 @@
 			<section class="experience">
 				<h2>Mon expérience</h2>
 				<ul>
+					<li><h3 class="lienstage"><a href="hhttp://www.arkea.com/banque/assurance/credit/" title="Arkéa"> Stage de trois mois au Crédit Mutuel Arkéa</a></h3></li>
 					<li><h3 class="lienstage"><a href="http://www.artesol.fr/1.aspx" title="Artesol"> Stage d'un mois à Artesol</a></h3></li>
 					<li><h3 class="lien"><a href="http://www.centralelilleprojets.fr/" title="La junior entreprise de Centrale Lille"> Chargé d'affaire à Centrale Lille Projets</a></h3></li>
 				</ul>
